# src/dtos/user/active.user.dto.ts
@@ -1,0 +1,9 @@
+import { IsEmail, Length } from 'class-validator';
+
+export class ActiveUserDTO {
+  @IsEmail()
+  public account: string;
+
+  @Length(20)
+  public activeCode: string;
+}
